--- a/E-CommerceApp/View/CustomCells/FavouriteTFCell/FavouriteTFCell.xib
+++ b/E-CommerceApp/View/CustomCells/FavouriteTFCell/FavouriteTFCell.xib
@@ -1,21 +1,103 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="FavouriteTFCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="102" id="KGk-i7-Jjw" customClass="FavouriteTFCell" customModule="E_CommerceApp" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="457" height="102"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="457" height="102"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="evW-jR-9Ne" customClass="ShadowView" customModule="E_CommerceApp" customModuleProvider="target">
+                        <rect key="frame" x="10" y="10" width="437" height="82"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Image-1" translatesAutoresizingMaskIntoConstraints="NO" id="69R-lX-IPL">
+                                <rect key="frame" x="5" y="10" width="80" height="62"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="80" id="Bxc-5O-pwM"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3zN-zH-aNC">
+                                <rect key="frame" x="397" y="26" width="30" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="GAV-1b-PDq"/>
+                                    <constraint firstAttribute="width" constant="30" id="doR-v1-iaM"/>
+                                </constraints>
+                                <state key="normal" title="Button" image="trash.fill" catalog="system"/>
+                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="Snw-EZ-gcO">
+                                <rect key="frame" x="105" y="10" width="282" height="62"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="tracking device" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UtA-Zw-Dye">
+                                        <rect key="frame" x="0.0" y="0.0" width="282" height="17.5"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="17.670000000000002" id="xBD-zA-RND"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
+                                        <color key="textColor" red="0.43917632099999998" green="0.43924170730000001" blue="0.43915563819999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Product Description" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qxJ-KD-cXr">
+                                        <rect key="frame" x="0.0" y="22" width="282" height="18"/>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
+                                        <color key="textColor" red="0.43917632099999998" green="0.43924170730000001" blue="0.43915563819999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="S6y-vx-gIH">
+                                        <rect key="frame" x="0.0" y="44" width="282" height="18"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Composition" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bSI-Oi-6cG">
+                                                <rect key="frame" x="0.0" y="0.0" width="136" height="18"/>
+                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
+                                                <color key="textColor" red="0.43917632099999998" green="0.43924170730000001" blue="0.43915563819999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="400" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jXm-3p-zYA">
+                                                <rect key="frame" x="146" y="0.0" width="136" height="18"/>
+                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
+                                                <color key="textColor" red="0.43917632099999998" green="0.43924170730000001" blue="0.43915563819999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.95353966950000002" green="0.96682864430000004" blue="0.98300558329999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="69R-lX-IPL" firstAttribute="top" secondItem="evW-jR-9Ne" secondAttribute="top" constant="10" id="3aI-qo-vfb"/>
+                            <constraint firstItem="Snw-EZ-gcO" firstAttribute="top" secondItem="evW-jR-9Ne" secondAttribute="top" constant="10" id="BLX-j1-4gK"/>
+                            <constraint firstAttribute="bottom" secondItem="69R-lX-IPL" secondAttribute="bottom" constant="10" id="DZx-Ft-fKM"/>
+                            <constraint firstItem="3zN-zH-aNC" firstAttribute="centerY" secondItem="qxJ-KD-cXr" secondAttribute="centerY" id="Kaf-p3-dsA"/>
+                            <constraint firstItem="3zN-zH-aNC" firstAttribute="leading" secondItem="Snw-EZ-gcO" secondAttribute="trailing" constant="10" id="N4V-Ns-jvM"/>
+                            <constraint firstAttribute="bottom" secondItem="Snw-EZ-gcO" secondAttribute="bottom" constant="10" id="NYR-G4-QQY"/>
+                            <constraint firstItem="69R-lX-IPL" firstAttribute="leading" secondItem="evW-jR-9Ne" secondAttribute="leading" constant="5" id="fa9-NK-d0w"/>
+                            <constraint firstAttribute="trailing" secondItem="3zN-zH-aNC" secondAttribute="trailing" constant="10" id="iGu-ON-OZm"/>
+                            <constraint firstItem="Snw-EZ-gcO" firstAttribute="leading" secondItem="69R-lX-IPL" secondAttribute="trailing" constant="20" id="lk5-eb-tXR"/>
+                        </constraints>
+                    </view>
+                </subviews>
+                <constraints>
+                    <constraint firstAttribute="bottom" secondItem="evW-jR-9Ne" secondAttribute="bottom" constant="10" id="1bY-IM-Lhd"/>
+                    <constraint firstAttribute="trailing" secondItem="evW-jR-9Ne" secondAttribute="trailing" constant="10" id="EJn-9y-qkM"/>
+                    <constraint firstItem="evW-jR-9Ne" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="OD6-2o-wQM"/>
+                    <constraint firstItem="evW-jR-9Ne" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="yji-SG-kTY"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <point key="canvasLocation" x="221.01449275362322" y="103.125"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="Image-1" width="115" height="110"/>
+        <image name="trash.fill" catalog="system" width="121" height="128"/>
+    </resources>
 </document>
